Replace new Long(String) with Long.valueOf(String)